# MAGE

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  old.readme
examples/glfw/: glfw  glfw.cpp
src/: glad.c  main.cpp
src/include/glad/: glad.h
src/lib/glad/: glad.h
src/projectsetup/: projectmaker  projectmaker.cpp  projset.cpp  projset.h
